# pqstd

./: .gitignore  SOURCES.md  buildbuddy.yaml
.github/: labeler.yml
.github/workflows/: Bazel-6.yml  Bazel-7.yml  CMake.yml  GNUMake.yml  bazel-6.yml  bazel-7.yml  bazel.yml
Bazel/6/: .bazelrc  repositories.bzl
Bazel/7/: .bazelrc  WORKSPACE.bazel
CMake/: CMakeLists.txt
GNUMake/: Makefile
bazel/: .bazelrc  WORKSPACE.bazel  rules.bzl
bazel/6/: .bazelrc  WORKSPACE  deps.bzl
bazel/7/: MODULE.bazel
